2011-04-24  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/tile.jl: tiling for EdgeActions
	original code by Mark Triggs, updated by me [not yet working!]

	* lisp/sawfish/wm/edge/hot-spot.jl: added HotMove for EdgeActions

	* lisp/sawfish/wm/windows.jl
	* lisp/sawfish/wm/workspace.jl
	* lisp/sawfish/wm/commands/move-resize.jl: various support functions
	for HotMove and Tiling

	* lisp/sawfish/wm/edge/conf.jl
	* lisp/sawfish/wm/edge/actions.jl: updated

2011-04-16  Christopher Roy Bratusek <nano@tuxfamily.org>
	* configure.in: bump minimum rep to 0.92.0

2011-04-15  Christopher Roy Bratusek <nano@tuxfamily.org>
	* sawfish.desktop
	* sawfish-wm.desktop
	* sawfish-ksm.desktop: unified order
	                       spec compliance
			       -- Kim B. Heino

2011-04-14  Christopher Roy Bratusek <nano@tuxfamily.org>
	* configure.in
	* Makefile.in
	* sounds/Makefile.in
	* themes/Makefile.in: remove version from install-paths

	* debian/**: merged more stuff from Ian Zimmermann

2011-04-13  Christopher Roy Bratusek <nano@tuxfamily.org>
	* Makefile.in: added debclean rule
	               improved distclean rule
		       improved gitclean rule

	* config.h.in: removed from GIT

	* config.guess
	* config.sub: added

	* Makedefs.in
	* Makefile.in
	* build-info
	* sawfish.pc.in
	* configure.in: removed architecture from install-paths

	* sounds/Makefile.in
	* src/Makefile.in: minor clean-ups -- Ian Zimmermann

	* debian/**: merged scripts from Ian Zimmermann 

2011-04-12  Christopher Roy Bratusek <nano@tuxfamily.org>
	* Makefile.in: don't remove NEWS upon clean or distclean

	* configure.in
	* sawfish.pc.in: improved pkg-config file (dependencies)

2011-04-11  Christopher Roy Bratusek <nano@tuxfamily.org>
	* man/sawfish.texi: updated EA docs
	                    updated copyright year

	* OPTIONS: removed edge-flip
	           removed infinite-desktop
		   removed tabs
		   added EdgeActions
		   updated apps-menu