@@ -102,6 +102,7 @@
 	    hide-desktop
 	    showing-desktop-p
 	    window-on-current-workspace-p
+	    window-on-current-workspace-viewport-p
 
 	    ;; XXX rename these..?
 	    ws-remove-window
@@ -897,7 +898,12 @@ last instance remaining, then delete the actual window."
   (define-command 'hide-desktop hide-desktop)
 
   (define (window-on-current-workspace-p w)
-    (= (window-workspaces w) current-workspace))
+    (= (car (window-get w 'workspaces)) current-workspace))
+
+  (define (window-on-current-workspace-viewport-p w)
+    (require 'sawfish.wm.viewport)
+    (and (= (car (window-get w 'workspaces)) current-workspace)
+	 (not (window-outside-viewport-p w))))
 
 ;;; some commands for moving directly to a workspace
 
