@@ -1,3 +1,10 @@
+2011-04-25  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/edge/tile.jl: only include windows on
+	current-workspace AND current-viewport
+
+	* lisp/sawfish/wm/workspace.jl: fixed window-on-current-workspace-p
+	added window-on-current-workspace-viewport-p
+
 2011-04-24  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/edge/tile.jl: tiling for EdgeActions
 	original code by Mark Triggs, updated by me [not yet working!]
